Feat: PD-238 비밀번호 변경 요청 페이지 다국어 적용

--- a/src/shared/config/internationalization/locales/en/auth.json
+++ b/src/shared/config/internationalization/locales/en/auth.json
@@ -19,5 +19,18 @@
     "error": {
       "sign-in": "An error occurred while signing in"
     }
+  },
+  "find-password": {
+    "title": "Reset Password",
+    "description": "We’ll send a password reset link to the email address you provided",
+    "label": {
+      "email": "Email"
+    },
+    "button": {
+      "send-reset-link": "Send password reset link"
+    },
+    "error": {
+      "request-password-reset": "An error occurred while requesting a password reset"
+    }
   }
 }
