--- a/src/shared/config/internationalization/locales/en/exception.json
+++ b/src/shared/config/internationalization/locales/en/exception.json
@@ -10,6 +10,12 @@
     "invalid-input-value": {
       "invalid-email": "Please check your email and password",
       "invalid-password": "Please check your email and password"
+    },
+    "email": {
+      "too-many-request": "You have requested too many times. Please try again in 10 minutes."
+    },
+    "resource-not-found": {
+      "user": "We couldn't find an account with that email"
     }
   }
 }
