--- a/src/shared/config/internationalization/locales/ko/auth.json
+++ b/src/shared/config/internationalization/locales/ko/auth.json
@@ -15,6 +15,22 @@
     },
     "footer": {
       "message": "회원이 아니신가요?"
+    },
+    "error": {
+      "sign-in": "로그인 중 오류가 발생했습니다"
+    }
+  },
+  "find-password": {
+    "title": "비밀번호 변경",
+    "description": "가입한 이메일로 비밀번호 초기화 링크를 보내드려요",
+    "label": {
+      "email": "이메일"
+    },
+    "button": {
+      "send-reset-link": "링크 전송"
+    },
+    "error": {
+      "request-password-reset": "비밀번호 변경 요청 중 오류가 발생했습니다"
     }
   }
 }
