--- a/src/shared/config/internationalization/locales/ko/exception.json
+++ b/src/shared/config/internationalization/locales/ko/exception.json
@@ -10,6 +10,12 @@
     "invalid-input-value": {
       "invalid-email": "이메일과 비밀번호를 확인해주세요",
       "invalid-password": "이메일과 비밀번호를 확인해주세요"
+    },
+    "email": {
+      "too-many-request": "너무 많은 요청을 보냈습니다. 10분 후에 다시 시도해주세요."
+    },
+    "resource-not-found": {
+      "user": "해당 이메일을 찾을 수 없습니다"
     }
   }
 }
