Feat: PD-238 비밀번호 변경 요청 성공 페이지 다국어 적용

--- a/src/shared/config/internationalization/locales/ko/auth.json
+++ b/src/shared/config/internationalization/locales/ko/auth.json
@@ -32,5 +32,12 @@
     "error": {
       "request-password-reset": "비밀번호 변경 요청 중 오류가 발생했습니다"
     }
+  },
+  "find-password-success": {
+    "title": "링크 발송 완료",
+    "description": "작성해주신 이메일로 비밀번호 리셋 링크를 발송했습니다",
+    "button": {
+      "back-to-sign-in": "로그인 페이지로"
+    }
   }
 }
