--- a/src/shared/config/internationalization/locales/en/auth.json
+++ b/src/shared/config/internationalization/locales/en/auth.json
@@ -32,5 +32,12 @@
     "error": {
       "request-password-reset": "An error occurred while requesting a password reset"
     }
+  },
+  "find-password-success": {
+    "title": "Reset Link Sent",
+    "description": "The password reset link has been sent successfully to the email address you provided",
+    "button": {
+      "back-to-sign-in": "Back to Sign In"
+    }
   }
 }
