Feat: PD-238 비밀번호 변경 페이지 다국어 적용

--- a/src/shared/config/internationalization/locales/en/auth.json
+++ b/src/shared/config/internationalization/locales/en/auth.json
@@ -39,5 +39,25 @@
     "button": {
       "back-to-sign-in": "Back to Sign In"
     }
+  },
+  "reset-password": {
+    "title": "Reset Password",
+    "label": {
+      "new-password": "New password",
+      "confirm-new-password": "Confirm password"
+    },
+    "placeholder": {
+      "new-password": "Enter the password",
+      "confirm-new-password": "Confirm password"
+    },
+    "button": {
+      "reset-password": "Reset Password"
+    },
+    "success": {
+      "reset-password": "Your password has been changed successfully"
+    },
+    "error": {
+      "reset-password": "An error occurred while resetting the password"
+    }
   }
 }
