--- a/src/shared/config/internationalization/locales/ko/auth.json
+++ b/src/shared/config/internationalization/locales/ko/auth.json
@@ -39,5 +39,25 @@
     "button": {
       "back-to-sign-in": "로그인 페이지로"
     }
+  },
+  "reset-password": {
+    "title": "비밀번호 변경",
+    "label": {
+      "new-password": "새 비밀번호",
+      "confirm-new-password": "새 비밀번호 확인"
+    },
+    "placeholder": {
+      "new-password": "비밀번호를 입력해주세요",
+      "confirm-new-password": "비밀번호를 다시 한 번 입력해주세요"
+    },
+    "button": {
+      "reset-password": "변경하기"
+    },
+    "success": {
+      "reset-password": "비밀번호가 변경되었습니다"
+    },
+    "error": {
+      "reset-password": "비밀번호 변경 중 오류가 발생했습니다"
+    }
   }
 }
