Feat: PD-246 학원 회원가입 페이지 다국어 적용

--- a/src/shared/config/internationalization/locales/en/auth.json
+++ b/src/shared/config/internationalization/locales/en/auth.json
@@ -59,5 +59,30 @@
     "error": {
       "reset-password": "An error occurred while resetting the password"
     }
+  },
+  "sign-up": {
+    "title": "Sign Up",
+    "description": "Have an account?",
+    "link": {
+      "sign-in": "Sign In"
+    },
+    "heading": {
+      "personal-information": "Account / Personal Information",
+      "academy-information": "Academy Information"
+    },
+    "button": {
+      "send-verification-code": "Send",
+      "verify-code": "Verify",
+      "sign-up": "Sign Up"
+    },
+    "success": {
+      "request-verification": "A verification email has been sent",
+      "verify-code": "Authentication completed"
+    },
+    "error": {
+      "request-verification": "An error occurred while requesting verification",
+      "not-verified-email": "Please verify the email first",
+      "not-enter-verification-code": "Please enter the code sent to the email"
+    }
   }
 }
