--- a/src/shared/config/internationalization/locales/en/exception.json
+++ b/src/shared/config/internationalization/locales/en/exception.json
@@ -12,10 +12,16 @@
       "invalid-password": "Please check your email and password"
     },
     "email": {
-      "too-many-request": "You have requested too many times. Please try again in 10 minutes."
+      "too-many-request": "You have requested too many times. Please try again in 10 minutes.",
+      "already-verified-code": "The verification code you entered has already been used",
+      "expired-code": "The verification code has expired. Please request a new one."
     },
     "resource-not-found": {
-      "user": "We couldn't find an account with that email"
+      "user": "We couldn't find an account with that email",
+      "email-verification-code": "The verification code you entered is incorrect"
+    },
+    "user": {
+      "already-used-email": "An account with that email already exists"
     }
   }
 }
