--- a/src/shared/config/internationalization/locales/ko/auth.json
+++ b/src/shared/config/internationalization/locales/ko/auth.json
@@ -59,5 +59,30 @@
     "error": {
       "reset-password": "비밀번호 변경 중 오류가 발생했습니다"
     }
+  },
+  "sign-up": {
+    "title": "회원가입",
+    "description": "계정이 있으신가요?",
+    "link": {
+      "sign-in": "로그인"
+    },
+    "heading": {
+      "personal-information": "기본 정보",
+      "academy-information": "학원 정보"
+    },
+    "button": {
+      "send-verification-code": "전송",
+      "verify-code": "확인",
+      "sign-up": "가입하기"
+    },
+    "success": {
+      "request-verification": "인증 이메일이 전송되었습니다",
+      "verify-code": "인증이 완료되었습니다"
+    },
+    "error": {
+      "request-verification": "인증 요청 중 오류가 발생했습니다",
+      "not-verified-email": "이메일 인증을 먼저 진행해주세요",
+      "not-enter-verification-code": "이메일로 전송된 코드를 입력해주세요"
+    }
   }
 }
