--- a/src/shared/config/internationalization/locales/ko/exception.json
+++ b/src/shared/config/internationalization/locales/ko/exception.json
@@ -12,10 +12,16 @@
       "invalid-password": "이메일과 비밀번호를 확인해주세요"
     },
     "email": {
-      "too-many-request": "너무 많은 요청을 보냈습니다. 10분 후에 다시 시도해주세요."
+      "too-many-request": "너무 많은 요청을 보냈습니다. 10분 후에 다시 시도해주세요.",
+      "already-verified-code": "입력한 인증 코드가 이미 사용되었습니다",
+      "expired-code": "인증 코드가 만료되었습니다. 새로운 코드를 요청해주세요."
     },
     "resource-not-found": {
-      "user": "해당 이메일을 찾을 수 없습니다"
+      "user": "해당 이메일을 찾을 수 없습니다",
+      "email-verification-code": "입력한 인증 코드가 올바르지 않습니다"
+    },
+    "user": {
+      "already-used-email": "해당 이메일로 가입한 계정이 이미 존재합니다"
     }
   }
 }
