--- a/src/shared/config/internationalization/locales/ko/validation.json
+++ b/src/shared/config/internationalization/locales/ko/validation.json
@@ -1,20 +1,37 @@
 {
   "validation": {
     "email": {
-      "required": "이메일을 입력해주세요",
+      "required": "이메일을 입력해 주세요",
       "maxLength": "최대 254자를 초과할 수 없습니다",
       "pattern": "이메일 형식이 올바르지 않습니다. 예시 : example@domain.com"
     },
     "password": {
-      "required": "비밀번호를 입력해주세요",
+      "required": "비밀번호를 입력해 주세요",
       "length": "9 ~ 28자 길이",
       "has-number": "하나 이상의 숫자",
       "has-lowercase-and-uppercase-letter": "대문자 및 소문자",
       "has-special-char": "하나 이상의 특수문자"
     },
     "confirm-password": {
-      "required": "비밀번호를 입력해주세요",
+      "required": "비밀번호를 입력해 주세요",
       "match": "비밀번호가 일치하지 않습니다"
+    },
+    "code": {
+      "required": "이메일 인증 코드를 입력해 주세요"
+    },
+    "firstName": {
+      "required": "이름을 입력해 주세요",
+      "maxLength": "이름은 최대 254자를 초과할 수 없습니다"
+    },
+    "lastName": {
+      "required": "성을 입력해 주세요",
+      "maxLength": "성은 최대 254자를 초과할 수 없습니다"
+    },
+    "country": {
+      "required": "국적을 선택해 주세요"
+    },
+    "birthDate": {
+      "required": "생년월일을 입력해 주세요"
     }
   }
 }
