--- a/src/shared/config/internationalization/locales/ko/field.json
+++ b/src/shared/config/internationalization/locales/ko/field.json
@@ -49,6 +49,27 @@
     "business-registration-number": {
       "label": "사업자 등록번호",
       "placeholder": "10자리 입력 (‘-’ 제외)"
+    },
+    "location": {
+      "option": {
+        "seoul": "서울",
+        "busan": "부산",
+        "daegu": "대구",
+        "incheon": "인천",
+        "gwangju": "광주",
+        "daejeon": "대전",
+        "ulsan": "울산",
+        "sejong": "세종",
+        "gyeonggi": "경기",
+        "gangwon": "강원",
+        "chungbuk": "충북",
+        "chungnam": "충남",
+        "jeonbuk": "전북",
+        "jeonnam": "전남",
+        "gyeongbuk": "경북",
+        "gyeongnam": "경남",
+        "jeju": "제주"
+      }
     }
   }
 }
