Feat: PD-251 유효성 검사 작성 및 회원가입 API 연결

--- a/src/shared/config/internationalization/locales/ko/auth.json
+++ b/src/shared/config/internationalization/locales/ko/auth.json
@@ -70,6 +70,9 @@
       "personal-information": "기본 정보",
       "academy-information": "학원 정보"
     },
+    "message": {
+      "verification-code": "이메일로 전송된 코드를 입력해주세요"
+    },
     "button": {
       "send-verification-code": "전송",
       "verify-code": "확인",
@@ -77,12 +80,14 @@
     },
     "success": {
       "request-verification": "인증 이메일이 전송되었습니다",
-      "verify-code": "인증이 완료되었습니다"
+      "verify-code": "인증이 완료되었습니다",
+      "sign-up": "회원가입이 완료되었습니다"
     },
     "error": {
       "request-verification": "인증 요청 중 오류가 발생했습니다",
-      "not-verified-email": "이메일 인증을 먼저 진행해주세요",
-      "not-enter-verification-code": "이메일로 전송된 코드를 입력해주세요"
+      "email-verification-required": "이메일 인증을 먼저 진행해주세요",
+      "email-not-verified": "이메일 주소가 인증되지 않았습니다",
+      "email-verification-code-not-checked": "이메일 인증 확인 버튼을 눌러주세요"
     }
   }
 }
