--- a/src/shared/config/internationalization/locales/en/auth.json
+++ b/src/shared/config/internationalization/locales/en/auth.json
@@ -70,6 +70,9 @@
       "personal-information": "Account / Personal Information",
       "academy-information": "Academy Information"
     },
+    "message": {
+      "verification-code": "Please enter the code sent to the email"
+    },
     "button": {
       "send-verification-code": "Send",
       "verify-code": "Verify",
@@ -77,12 +80,14 @@
     },
     "success": {
       "request-verification": "A verification email has been sent",
-      "verify-code": "Authentication completed"
+      "verify-code": "Authentication completed",
+      "sign-up": "Sign up completed successfully"
     },
     "error": {
       "request-verification": "An error occurred while requesting verification",
-      "not-verified-email": "Please verify the email first",
-      "not-enter-verification-code": "Please enter the code sent to the email"
+      "email-verification-required": "Please verify the email first",
+      "email-not-verified": "This email address is not verified",
+      "email-verification-code-not-checked": "Please click the verify button to complete email verification"
     }
   }
 }
