--- a/src/shared/config/internationalization/locales/ko/validation.json
+++ b/src/shared/config/internationalization/locales/ko/validation.json
@@ -27,11 +27,37 @@
       "required": "성을 입력해 주세요",
       "maxLength": "성은 최대 254자를 초과할 수 없습니다"
     },
+    "fullName": {
+      "required": "이름을 입력해 주세요",
+      "maxLength": "이름은 최대 254자를 초과할 수 없습니다"
+    },
     "country": {
       "required": "국적을 선택해 주세요"
     },
     "birthDate": {
       "required": "생년월일을 입력해 주세요"
+    },
+    "representativeName": {
+      "required": "대표자 이름을 입력해 주세요",
+      "maxLength": "대표자 이름은 최대 10자를 초과할 수 없습니다",
+      "pattern": "한글로만 입력해주세요"
+    },
+    "academyName": {
+      "required": "학원 이름을 입력해 주세요",
+      "maxLength": "학원 이름은 최대 30자를 초과할 수 없습니다"
+    },
+    "academyNameEn": {
+      "required": "학원 이름을 입력해 주세요",
+      "maxLength": "학원 이름은 최대 30자를 초과할 수 없습니다"
+    },
+    "detailedAddress": {
+      "required": "상세 주소를 입력해 주세요",
+      "maxLength": "상세 주소는 최대 100자를 초과할 수 없습니다"
+    },
+    "businessRegistrationNumber": {
+      "required": "사업자 등록번호를 입력해 주세요",
+      "length": "10자를 입력해주세요",
+      "pattern": "숫자만 입력해주세요"
     }
   }
 }
