--- a/src/shared/config/internationalization/locales/en/exception.json
+++ b/src/shared/config/internationalization/locales/en/exception.json
@@ -4,8 +4,7 @@
       "email-not-correct": "We couldn't find an account with that email",
       "pw-not-correct": "The password you entered is incorrect",
       "deleted-user": "This account has been deactivated",
-      "not-academy-role": "Please sign in with an academy account",
-      "not-teacher-role": "Please sign in with a teacher account"
+      "access-denied": "You do not have permission to access with this account"
     },
     "invalid-input-value": {
       "invalid-email": "Please check your email and password",
