Feat: PD-254 지원자 목록 API 연결

--- a/src/shared/config/internationalization/locales/en/applicant-management.json
+++ b/src/shared/config/internationalization/locales/en/applicant-management.json
@@ -11,7 +11,8 @@
       "applicant": "Applicant",
       "job-title": "Job Title",
       "memo": "Memo",
-      "application-date": "Application Date"
+      "application-date": "Application Date",
+      "no-data": "No applications have been received yet"
     }
   }
 }
