--- a/src/shared/config/internationalization/locales/ko/applicant-management.json
+++ b/src/shared/config/internationalization/locales/ko/applicant-management.json
@@ -11,7 +11,8 @@
       "applicant": "지원자",
       "job-title": "공고 제목",
       "memo": "메모",
-      "application-date": "지원 일자"
+      "application-date": "지원 일자",
+      "no-data": "아직 접수된 지원자가 없습니다"
     }
   }
 }
