Feat: PD-263 공고 복사 기능 추가

--- a/src/shared/config/internationalization/locales/en/job-posting.json
+++ b/src/shared/config/internationalization/locales/en/job-posting.json
@@ -17,6 +17,9 @@
     },
     "button": {
       "register-job-posting": "Register Job Posting"
+    },
+    "success": {
+      "job-posting-copy": "Job posting copied successfully"
     }
   }
 }
