--- a/src/shared/config/internationalization/locales/ko/job-posting.json
+++ b/src/shared/config/internationalization/locales/ko/job-posting.json
@@ -17,6 +17,9 @@
     },
     "button": {
       "register-job-posting": "공고 등록하기"
+    },
+    "success": {
+      "job-posting-copy": "공고를 복사했어요"
     }
   }
 }
