Feat: PD-263 버튼 disabled 스타일 추가

--- a/src/shared/config/internationalization/locales/en/job-posting.json
+++ b/src/shared/config/internationalization/locales/en/job-posting.json
@@ -13,7 +13,8 @@
       "posted-date": "Posted Date",
       "expiration-date": "Expiration Date",
       "no-data": "No job postings have been registered yet",
-      "no-expiration-date": "Open Recruitment"
+      "no-expiration-date": "Open Recruitment",
+      "draft": "Not Posted"
     },
     "button": {
       "register-job-posting": "Register Job Posting"
